--- a/docs/user-guide/old-version/en/1.-Install.md
+++ b/docs/user-guide/old-version/en/1.-Install.md
@@ -8,6 +8,7 @@ This is the recommended structure to the project, remember that inside of each m
 
 **By default the first module must to be always named `ModuleDefault`.**
 
+```properties
     assets
     |  example.jpg
     config
@@ -23,9 +24,6 @@ This is the recommended structure to the project, remember that inside of each m
     |  |  Model
     |  |  |  Gateway
     |  |  |  |  User.php
-    |  |  |  SqlFiles
-    |  |  |  |  user
-    |  |  |  |  |  getById.sql
     |  |  |  UserBusiness.php
     |  |  views
     |  |  |  index
@@ -38,6 +36,7 @@ This is the recommended structure to the project, remember that inside of each m
     composer.json
     composer.phar
     index.php
+```
 
 ---
 ### .htaccess
@@ -144,5 +143,3 @@ We recommend you to create your own Virtual Host for each application, simulatin
 ```
 
 This is everything you must to know to make it works. Good job, thank you!
-
-### Next: [[1.1 Default Constants]]
