--- a/docs/user-guide/old-version/ptbr/1.-Instalação.md
+++ b/docs/user-guide/old-version/ptbr/1.-Instalação.md
@@ -15,8 +15,8 @@ Esta é a estrutura recomendada do projeto, lembre-se que dentro da pasta de cad
 **Por padrão o primeiro módulo é sempre o `ModuleDefault`, este nunca deve deixar de existir.**
 
 ```properties
-    # Este é um EXEMPLO de estrutura
-    
+    assets
+    |  example.jpg
     config
     |  database.config.php
     modules
@@ -30,9 +30,6 @@ Esta é a estrutura recomendada do projeto, lembre-se que dentro da pasta de cad
     |  |  Model
     |  |  |  Gateway
     |  |  |  |  User.php
-    |  |  |  SqlFiles
-    |  |  |  |  user
-    |  |  |  |  |  getById.sql
     |  |  |  UserBusiness.php
     |  |  views
     |  |  |  index
@@ -146,5 +143,3 @@ Recomendamos que você crie um Virtual Host para rodar a aplicação, simulando 
 ```
 
 Isto é tudo para fazer funcionar. Bom trabalho, muito obrigado.
-
-### Próximo: [[1.1 Constantes padrão]]
