--- a/docs/user-guide/old-version/ptbr/3.-Layouts.md
+++ b/docs/user-guide/old-version/ptbr/3.-Layouts.md
@@ -52,7 +52,4 @@ Para isso funcionar adicione estas linhas em qualquer lugar de seu `layout.phtml
 <!-- /Mensagens do sistema -->
 ```
 
-Veja mais sobre este assunto [[aqui|2.1-MvcAbstractController#addMsg]].
----
-### Anterior: [[2.4 Debug]]
-### Próximo: [[4. Formulários]]
+Veja mais sobre este assunto [aqui](/user-guide/old-version/ptbr/2.1-MvcAbstractController/#addMsg).
